--- a/privatebin-data/docker-compose.yml
+++ b/privatebin-data/docker-compose.yml
@@ -14,3 +14,4 @@ services:
       # Nginx in this image is set up to deflate/gzip text content.
       - 8080:80
     restart: always
+# test change
