Added custom config & .env.example files, updated documentation

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,11 +2,13 @@ version: "3.7"
 
 services:
   privatebin:
-    image: privatebin/nginx-fpm-alpine
+    image: privatebin/nginx-fpm-alpine:1.2.1
     read_only: true # not in compose 3.0 documentation but appears supported based
     # on issues for docker compose in Github
     volumes:
-      - './privatebin-data:/srv/data'
+      - './privatebin-data:/srv/data' # data volume for pastes allows pastes
+      # to persist after container stop or restart
+      - './conf.php:/srv/cfg/conf.php:ro' # second volume for custom configuration file
     ports:
       # To update: Be sure to use a reverse proxy for HTTPS termination 
       # in front of it for production environments.
@@ -14,5 +16,5 @@ services:
       # another webserver as reverse proxy in front of this for HTTPS 
       #offloading and reducing the attack surface on your TLS stack. The 
       # Nginx in this image is set up to deflate/gzip text content.
-      - 8080:80
+      - $HOST_PORT:80
     restart: always
