--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: "3.7"
 
 services:
   privatebin:
-    image: privatebin/nginx-fpm-alpine:1.2.1
+    image: privatebin/nginx-fpm-alpine:latest #TAGS stable latest edge nightly 
     read_only: true # not in compose 3.0 documentation but appears supported based
     # on issues for docker compose in Github
     volumes:
@@ -16,5 +16,5 @@ services:
       # another webserver as reverse proxy in front of this for HTTPS 
       #offloading and reducing the attack surface on your TLS stack. The 
       # Nginx in this image is set up to deflate/gzip text content.
-      - $HOST_PORT:80
-    restart: always
+      - 8080:80
+    restart: unless-stopped
