--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
     volumes:
       - './privatebin-data:/srv/data' # data volume for pastes allows pastes
       # to persist after container stop or restart
-      - './conf.php:/srv/cfg/conf.php:ro' # second volume for custom configuration file
+      - './cfg/conf.php:/srv/cfg/conf.php:ro' # second volume for custom configuration file
     ports:
       # To update: Be sure to use a reverse proxy for HTTPS termination 
       # in front of it for production environments.
