--- a/cfg/conf.example.cfg
+++ b/cfg/conf.example.cfg
@@ -5,7 +5,7 @@
 
 [main]
 ; (optional) set a project name to be displayed on the website
-; name = "PrivateBin"
+name = "Echange Eduprovence"
 
 ; The full URL, with the domain name and directories that point to the
 ; PrivateBin files, including an ending slash (/). This URL is essential to
@@ -13,7 +13,7 @@
 ; basepath = "https://privatebin.example.com/"
 
 ; enable or disable the discussion feature, defaults to true
-discussion = true
+discussion = false
 
 ; preselect the discussion feature, defaults to false
 opendiscussion = false
@@ -22,7 +22,7 @@ opendiscussion = false
 password = true
 
 ; enable or disable the file upload feature, defaults to false
-fileupload = false
+fileupload = true
 
 ; preselect the burn-after-reading feature, defaults to false
 burnafterreadingselected = false
@@ -35,26 +35,26 @@ defaultformatter = "plaintext"
 ; syntaxhighlightingtheme = "sons-of-obsidian"
 
 ; size limit per paste or comment in bytes, defaults to 10 Mebibytes
-sizelimit = 10485760
+sizelimit = 13485760
 
 ; template to include, default is "bootstrap" (tpl/bootstrap.php)
 template = "bootstrap"
 
 ; (optional) info text to display
 ; use single, instead of double quotes for HTML attributes
-;info = "More information on the <a href='https://privatebin.info/'>project page</a>."
+info = "Plus d'informations sur <a href='https://www.example.com/'>le site du projet</a>."
 
 ; (optional) notice to display
-; notice = "Note: This is a test service: Data may be deleted anytime. Kittens will die if you abuse this service."
+; notice = "Note: Les fichiers déposés sur le service Echanges, sont supprimés automatiquement toute les 12H"
 
 ; by default PrivateBin will guess the visitors language based on the browsers
 ; settings. Optionally you can enable the language selection menu, which uses
 ; a session cookie to store the choice until the browser is closed.
-languageselection = false
+languageselection = true
 
 ; set the language your installs defaults to, defaults to English
 ; if this is set and language selection is disabled, this will be the only language
-; languagedefault = "en"
+languagedefault = "fr"
 
 ; (optional) URL shortener address to offer after a new paste is created.
 ; It is suggested to only use this with self-hosted shorteners as this will leak
@@ -63,11 +63,11 @@ languageselection = false
 
 ; (optional) Let users create a QR code for sharing the paste URL with one click.
 ; It works both when a new paste is created and when you view a paste.
-; qrcode = true
+qrcode = true
 
 ; (optional) Let users send an email sharing the paste URL with one click.
 ; It works both when a new paste is created and when you view a paste.
-; email = true
+email = false
 
 ; (optional) IP based icons are a weak mechanism to detect if a comment was from
 ; a different user when the same username was used in a comment. It might get
@@ -98,7 +98,7 @@ languageselection = false
 ; stay compatible with PrivateBin Alpha 0.19, less secure
 ; if enabled will use base64.js version 1.7 instead of 2.1.9 and sha1 instead of
 ; sha256 in HMAC for the deletion token
-; zerobincompatibility = false
+zerobincompatibility = false
 
 ; Enable or disable the warning message when the site is served over an insecure
 ; connection (insecure HTTP instead of HTTPS), defaults to true.
@@ -115,7 +115,7 @@ languageselection = false
 [expire]
 ; expire value that is selected per default
 ; make sure the value exists in [expire_options]
-default = "1week"
+default = "16hour"
 
 [expire_options]
 ; Set each one of these to the number of seconds in the expiration period,
@@ -123,9 +123,11 @@ default = "1week"
 5min = 300
 10min = 600
 1hour = 3600
+12hours = 43200
 1day = 86400
+2day = 172800
 1week = 604800
-; Well this is not *exactly* one month, it's 30 days:
+; Well this is not *exactly* one month, it is 30 days
 1month = 2592000
 1year = 31536000
 never = 0
@@ -155,18 +157,18 @@ limit = 10
 
 ; (optional) if your website runs behind a reverse proxy or load balancer,
 ; set the HTTP header containing the visitors IP address, i.e. X_FORWARDED_FOR
-; header = "X_FORWARDED_FOR"
+header = "X_FORWARDED_FOR"
 
 [purge]
 ; minimum time limit between two purgings of expired pastes, it is only
 ; triggered when pastes are created
 ; Set this to 0 to run a purge every time a paste is created.
-limit = 300
+limit = 0
 
 ; maximum amount of expired pastes to delete in one purge
 ; Set this to 0 to disable purging. Set it higher, if you are running a large
 ; site
-batchsize = 10
+batchsize = 30
 
 [model]
 ; name of data model class to load and directory for storage
