--- a/cfg/conf.example.cfg
+++ b/cfg/conf.example.cfg
@@ -5,7 +5,7 @@
 
 [main]
 ; (optional) set a project name to be displayed on the website
-name = "Echange Eduprovence"
+name = "Instance Name"
 
 ; The full URL, with the domain name and directories that point to the
 ; PrivateBin files, including an ending slash (/). This URL is essential to
@@ -45,7 +45,7 @@ template = "bootstrap"
 info = "Plus d'informations sur <a href='https://www.example.com/'>le site du projet</a>."
 
 ; (optional) notice to display
-; notice = "Note: Les fichiers déposés sur le service Echanges, sont supprimés automatiquement toute les 12H"
+; notice = "Note: Les fichiers déposés sur le service Echanges, sont supprimés automatiquement toute les semaines"
 
 ; by default PrivateBin will guess the visitors language based on the browsers
 ; settings. Optionally you can enable the language selection menu, which uses
@@ -115,7 +115,7 @@ zerobincompatibility = false
 [expire]
 ; expire value that is selected per default
 ; make sure the value exists in [expire_options]
-default = "16hour"
+default = "12hour"
 
 [expire_options]
 ; Set each one of these to the number of seconds in the expiration period,
