--- a/cfg/.env.example
+++ b/cfg/.env.example
@@ -1,12 +1,12 @@
 
 # Specify host port here; reference this variable in the compose file prepended by $:
-HOST_PORT=80
+#HOST_PORT=8080
 
 # Additional configuration of a database may be needed should you chose a database model
 # for storing pastes (see conf.php for more on this)
-DB_USER=
-DB_PASS=
-DB_NAME=
-DB_HOST=db
-DB_BACKUP=
-SITE_BACKUP=
+#DB_USER=
+#DB_PASS=
+#DB_NAME=
+#DB_HOST=db
+#DB_BACKUP=
+#SITE_BACKUP=
